<resources>
    <string name="app_name">Firebase-CRUD-Android-Client</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="enter_your_name">enter your name</string>
    <string name="enter_your_age">enter your age</string>
    <string name="title_activity_main3">MainActivity3</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_contact">ADD Contact</string>
    <string name="full_name">Full Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="save_contact">Save Contact</string>
    <string name="added_contact">Contact has been added successfully</string>
    <string name="error">%1$s</string>
    <string name="_0870778788">0870778788</string>
    <string name="hi">hi</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="update_contact">Update contact</string>
</resources>